--- a/lua/makefile
+++ b/lua/makefile
@@ -2,14 +2,14 @@ LUA_HEADER=/usr/include/lua5.1
 
 RPI_GPIO_PYTHON_SRC_DIR=../source/
 
-LUA_LIBS=$(shell pkg-config --libs lua5.1)
+LUA_LIBS=/usr/local/lib/liblua.a
 
 GPIO_CORE_OBJECTS=c_gpio.o cpuinfo.o event_gpio.o soft_pwm.o
 
 ALL_OBJECTS=RPi_GPIO_Lua_module.o darksidesync_aux.o ${GPIO_CORE_OBJECTS}
 
 GPIO.so: ${ALL_OBJECTS} 
-	gcc -shared -o GPIO.so -lpthread ${LUA_LIBS} ${ALL_OBJECTS}
+	gcc -shared -o GPIO.so -lpthread ${ALL_OBJECTS}
 
 RPi_GPIO_Lua_module.o:
 	gcc -fPIC -c  RPi_GPIO_Lua_module.c -I ${RPI_GPIO_PYTHON_SRC_DIR} -I ${LUA_HEADER}
